--- a/gifcache/templates/home/500.html
+++ b/gifcache/templates/home/500.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 <div class="home-section animate-bg" style="padding-top: 5.2em; padding-bottom: .25em;">
     <div id="main-logo">
-        <div class="main-logo-img spin"><img src="http://i.imgur.com/eXxTPkH.gif"></div>
+        <div class="main-logo-img spin"><img src="/static/img/homegif{{ home_gif }}.gif"></div>
         <div class="error-code pulse">500</div>
     </div>
 
