--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -4,7 +4,7 @@
 <div class="home-section animate-bg" style="height: 100vh; padding-top: 2em;">
     <div id="main-logo">
         <div class="main-logo-gif transparent pulse animate">GIF</div>
-        <div class="main-logo-img grow"><img src="/static/img/{{ random_gif }}.gif"></div>
+        <div class="main-logo-img grow"><img src="/static/img/homegif{{ home_gif }}.gif"></div>
         <div class="main-logo-cache transparent pulse animate">Cache</div>
     </div>
 
