--- a/gifcache/templates/users/view.html
+++ b/gifcache/templates/users/view.html
@@ -390,10 +390,7 @@
                 </div>
 
                 <div id="grabber-loading" class="loading-wrapper hidden">
-                    <div class="loading">
-                        <i class="fa fa-spinner fa-pulse"></i>
-                        <div>Processing, one moment please...</div>
-                    </div>
+                    <div class="loading"><i class="fa fa-spinner fa-pulse"></i><div>Processing, one moment please...</div></div>
                 </div>
             </div>
         </div>
