--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -9,12 +9,8 @@ html, body {
 	color: #4d4d4d;
 	font-family: 'Quicksand', sans-serif;
 }
-a {
-	text-decoration: none;
-}
-a:hover {
-	color: #bebebe;
-}
+a {text-decoration: none;}
+a:hover {color: #bebebe;}
 input {
 	display: block;
 	margin: .5em auto;
@@ -37,12 +33,8 @@ select {
 	border-radius: .2em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
-select:hover {
-	cursor: pointer;
-}
-.hidden {
-	display: none !important;
-}
+select:hover {cursor: pointer;}
+.hidden {display: none !important;}
 .lightbox {
 	position: fixed;
 	z-index: 11;
@@ -62,9 +54,7 @@ select:hover {
 	text-align: center;
 	font-size: 3.2em;
 }
-.lightbox-title div {
-	display: inline-block;
-}
+.lightbox-title div {display: inline-block;}
 .lightbox-cancel {
 	display: inline-block;
 	position: absolute !important;
@@ -102,16 +92,12 @@ select:hover {
 	cursor: pointer;
 	background-color: #45C788;
 }
-.lightbox-control:active {
-	margin-top: 4px;
-}
+.lightbox-control:active {margin-top: 4px;}
 .lightbox-control-label {
 	text-align: center;
 	font-size: .8em;
 }
-#grabber-loading {
-	position: absolute;
-}
+#grabber-loading {position: absolute;}
 .loading {
 	display: block;
 	position: relative;
@@ -129,9 +115,7 @@ select:hover {
 	font-size: 0.75em;
 	border-radius: .2em;
 }
-.transparent {
-	opacity: 0;
-}
+.transparent {opacity: 0;}
 .cancel {
 	margin: .25em auto;
 	width: 83%;
@@ -180,9 +164,7 @@ select:hover {
 	color: white;
 	text-shadow: 1px 1px 3px #000;
 }
-.no-labels label {
-	display: none;
-}
+.no-labels label {display: none;}
 .main-form .main-submit {
 	position: relative;
 	margin-top: 2em;
@@ -243,30 +225,18 @@ select:hover {
 	top: -7em;
 }
 /* CSS Transitions */
-.animate {
-	transition: all .4s ease-in-out;
-}
-.animate-fast {
-	transition: all .2s ease-in-out;
-}
-.animate-slow {
-	transition: all .8s ease-in-out;
-}
-.animate-bg {
-	transition: background-color .4s ease-in-out;
-}
+.animate {transition: all .4s ease-in-out;}
+.animate-fast {transition: all .2s ease-in-out;}
+.animate-slow {transition: all .8s ease-in-out;}
+.animate-bg {transition: background-color .4s ease-in-out;}
 /* Responsive images/videos */
-.img-wrapper {
-	max-width: 150px;
-}
+.img-wrapper {max-width: 150px;}
 .img-wrapper img, .img-wrapper video {
 	width: 150px;
 	height: 100px;
 	border-radius: .25em;
 }
-.img-wrapper:hover {
-	cursor: pointer;
-}
+.img-wrapper:hover {cursor: pointer;}
 .message {
 	margin: 1em auto;
 	padding: 1em;
@@ -304,30 +274,18 @@ select:hover {
 	border-bottom: .2em solid white;
 }
 /* Classes for nav-link hover effects */
-.blue-border:hover {
-	border-top: .2em solid #72ADD3;
-}
-.red-border:hover {
-	border-top: .2em solid #ff3434;
-}
-.yellow-border:hover {
-	border-top: .2em solid #FFB558;
-}
-.purple-border:hover {
-	border-top: .2em solid #6b71ce;
-}
-.peach-border:hover {
-	border-top: .2em solid #ff8358;
-}
+.blue-border:hover {border-top: .2em solid #72ADD3;}
+.red-border:hover {border-top: .2em solid #ff3434;}
+.yellow-border:hover {border-top: .2em solid #FFB558;}
+.purple-border:hover {border-top: .2em solid #6b71ce;}
+.peach-border:hover {border-top: .2em solid #ff8358;}
 .nav-logo {
 	display: inline-block;
 	position: relative;
 	top: .5em;
 	left: 1em;
 }
-.nav-logo:hover > .nav-logo-circle {
-	border: .2em solid #6b71ce;
-}
+.nav-logo:hover > .nav-logo-circle {border: .2em solid #6b71ce;}
 #gif {
 	position: absolute;
 	z-index: 2;
@@ -380,9 +338,7 @@ select:hover {
 	color: white;
 	height: 4em;
 }
-.profile-nav-link:hover {
-	cursor: pointer;
-}
+.profile-nav-link:hover {cursor: pointer;}
 .profile-nav-link:hover > .profile-nav-extra {
 	display: block;
 	text-shadow: none;
@@ -423,15 +379,9 @@ select:hover {
 	background-color: #4c4c4c;
 	box-shadow: inset 0px 5px 16px -5px rgba(0,0,0,0.75);
 }
-.push {
-	height: 10em;
-}
-.footer a {
-	color: #bebebe;
-}
-.footer a:hover {
-	color: #6b71ce;
-}
+.push {height: 10em;}
+.footer a {color: #bebebe;}
+.footer a:hover {color: #6b71ce;}
 .footer-logo {
 	display: inline-block;
 	margin: .5em;
@@ -445,25 +395,15 @@ select:hover {
 	left: .15em;
 	font-family: 'PT Sans', sans-serif;
 }
-.footer-cache {
-	font-family: 'Lobster', cursive;
-}
-.footer-problems {
-	margin: 0;
-}
-.footer-problems p {
-	margin: 0;
-}
+.footer-cache {font-family: 'Lobster', cursive;}
+.footer-problems {margin: 0;}
+.footer-problems p {margin: 0;}
 .footer-problems div {
 	font-family: 'PT Sans', sans-serif;
 	font-size: .75em;
 }
-.footer-nav-links {
-	margin: 1em;
-}
-.footer-nav-links a {
-	margin: 0 .5em;
-}
+.footer-nav-links {margin: 1em;}
+.footer-nav-links a {margin: 0 .5em;}
 /* Buttons ******************************************************************/
 .btn {
 	position: relative;
@@ -480,9 +420,7 @@ select:hover {
 .btn:active,.green-btn-selected,
 .blue-btn-selected, .red-btn-selected,
 .yellow-btn-selected, .purple-btn-selected,
-.peach-btn-selected {
-	top: 4px;
-}
+.peach-btn-selected {top: 4px;}
 .green-btn {
 	background-color: #45C788;
 	box-shadow: 0px 6px 0px #32a76e;
@@ -591,21 +529,10 @@ select:hover {
 }
 /* Home Page Styles *********************************************************/
 .levitate {
-	-webkit-animation:
-		levitate 4s infinite;
-}
-.grow {
-	-webkit-animation:
-		grow 2s 1
-}
-.pulse {
-	-webkit-animation:
-		pulse 3s infinite;
-}
-.spin {
-	-webkit-animation:
-		spin 25s infinite;
-}
+	-webkit-animation: levitate 4s infinite;}
+.grow {-webkit-animation: grow 2s 1}
+.pulse {-webkit-animation: pulse 3s infinite;}
+.spin {-webkit-animation: spin 25s infinite;}
 @-webkit-keyframes grow {
 	0% {
 		font-size: 0;
@@ -759,9 +686,7 @@ select:hover {
 	background-color: #25B972;
 	border-bottom: none
 }
-.home-btn:active {
-	top: .25em;
-}
+.home-btn:active {top: .25em;}
 .home-bs-title {
 	margin: 1em 0;
 	font-size: 3.25em;
@@ -801,12 +726,8 @@ select:hover {
 	text-align: center;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
-.startup-bs-img:hover {
-	transform: scale(1.75);
-}
-.startup-bs-img img {
-	width: 100%;
-}
+.startup-bs-img:hover {transform: scale(1.75);}
+.startup-bs-img img {width: 100%;}
 .home-demo {
 	margin: 1em auto;
 	margin-top: 6em;
@@ -942,9 +863,7 @@ select:hover {
 	text-align: center;
 	color: white;
 }
-.extra-login-links {
-	text-align: center;
-}
+.extra-login-links {text-align: center;}
 /* Profile View Styles *********************************************************/
 /* Box with profile info */
 .profile-info {
@@ -995,16 +914,12 @@ select:hover {
 	height: 1.75em;
 	line-height: 1.75em;
 }
-.profile-stats {
-	margin: 0 auto;
-}
+.profile-stats {margin: 0 auto;}
 .stat {
 	display: inline-block;
 	padding: .5em;
 }
-.stat-number {
-	font-size: 3em;
-}
+.stat-number {font-size: 3em;}
 .stat-desc {
 	position: relative;
 	font-size: 1.5em;
@@ -1045,9 +960,7 @@ select:hover {
 	width: 5em;
 	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
 }
-.inner-nav-tags:hover > .inner-tag-nav {
-	display: block !important;
-}
+.inner-nav-tags:hover > .inner-tag-nav {display: block !important;}
 .inner-tag-nav, .sort-options {
 	position: absolute;
 	z-index: 7;
@@ -1059,9 +972,7 @@ select:hover {
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	border-radius: .25em;
 }
-.sort:hover > .sort-options {
-	display: block !important;
-}
+.sort:hover > .sort-options {display: block !important;}
 .sort-options {
 	width: 6em;
 	text-align: left;
@@ -1135,9 +1046,7 @@ select:hover {
 	cursor: pointer;
 	transform: scale(1.2);
 }
-.nav-settings-icon:hover > .nav-settings {
-	display: block !important;
-}
+.nav-settings-icon:hover > .nav-settings {display: block !important;}
 .nav-settings {
 	position: absolute;
 	top: 1.15em;
@@ -1166,9 +1075,7 @@ select:hover {
 	cursor: pointer;
 	transform: scale(1.2);
 }
-.nav-setting-icon:active {
-	top: 4px;
-}
+.nav-setting-icon:active {top: 4px;}
 .nav-setting-icon i {
 	display: block;
 	margin: 0;
@@ -1187,9 +1094,7 @@ select:hover {
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
 }
-.add-form-input {
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-}
+.add-form-input {box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);}
 .add-gif-form form {
 	position: relative;
 	margin: 0 auto;
@@ -1209,12 +1114,8 @@ select:hover {
 	border: none;
 }
 /* Gif Grids */
-#grids {
-	margin-bottom: 2em;
-}
-.expanded-grids {
-	min-height: 47em;
-}
+#grids {margin-bottom: 2em;}
+.expanded-grids {min-height: 47em;}
 #all-gif-grid {
 	margin: 0 auto !important;
 	width: 100%;
@@ -1265,20 +1166,14 @@ select:hover {
 	border-radius: .25em;
 	transform: scale(1.2) !important;
 }
-.tag-settings-icon:active {
-	top: 1px;
-}
-.gif-grid p {
-	font-family: 'PT Sans', sans-serif;
-}
+.tag-settings-icon:active {top: 1px;}
+.gif-grid p {font-family: 'PT Sans', sans-serif;}
 .gif-grid i {
 	margin: 0;	
 	display: inline-block;
 	font-size: 1.25em;	
 }
-.gif-grid i:active {
-	margin-top: 8px;
-}
+.gif-grid i:active {margin-top: 8px;}
 .gif-grid-icon {
 	padding: .25em;
 	background-color: rgba(0, 0, 0, 0.6);
@@ -1296,16 +1191,12 @@ select:hover {
 	color: white;
 	text-shadow: 1px 1px 3px #000;
 }
-.gif-expand {
-	left: 0.75em;
-}
+.gif-expand {left: 0.75em;}
 .gif-expand:hover, .copy-url:hover {
 	cursor: pointer;
 	transform: scale(1.2);
 }
-.delete-form {
-	margin-bottom: 2em;
-}
+.delete-form {margin-bottom: 2em;}
 /* Hidden div inside Gif elements, activated when bulk options seleced */
 .bulk-wrapper {
 	position: absolute;
@@ -1318,12 +1209,8 @@ select:hover {
 	border-radius: 1em;
 	background-color: rgba(0, 0, 0, 0.5);
 }
-.bulk-wrapper:hover {
-	cursor: pointer;
-}
-.bulk-wrapper:hover > i {
-	color: #25B972;
-}
+.bulk-wrapper:hover {cursor: pointer;}
+.bulk-wrapper:hover > i {color: #25B972;}
 .bulk-wrapper i {
 	position: relative;
 	top: .25em;
@@ -1332,9 +1219,7 @@ select:hover {
 	color: #ff6767;
 	text-shadow: 1px 1px 3px #000;
 }
-.fa-circle {
-	color: #25B972 !important;
-}
+.fa-circle {color: #25B972 !important;}
 /* Elements of the Gif Grids */
 .gif-grid-element {
 	position: relative;
@@ -1394,9 +1279,7 @@ select:hover {
 	border-radius: .5em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
-.gif-grid-thumbnail:hover {
-	cursor: pointer;
-}
+.gif-grid-thumbnail:hover {cursor: pointer;}
 .gif-url {
 	position: relative;
 	width: 95%;
@@ -1425,15 +1308,9 @@ select:hover {
 	color: #498FBD;
 	font-size: 1em;
 }
-.delete-tag {
-	color: #ff3434 !important;
-}
-.delete-tag:hover {
-	color: #ff6767 !important;
-}
-.warning .delete-tag:hover {
-	color: #ff3434 !important;
-}
+.delete-tag {color: #ff3434 !important;}
+.delete-tag:hover {color: #ff6767 !important;}
+.warning .delete-tag:hover {color: #ff3434 !important;}
 .tag {
 	display: inline-block;
 	margin: .3em;
@@ -1444,12 +1321,8 @@ select:hover {
 	box-shadow: 0px 6px 0px #4b96c7;
 	border-radius: 1em 1em 0 1em;
 }
-.tag i:hover {
-	cursor: pointer;
-}
-.tag-name {
-	display: inline-block;
-}
+.tag i:hover {cursor: pointer;}
+.tag-name {display: inline-block;}
 .add-tags {
 	margin: .75em auto;
 	text-align: center;
@@ -1467,25 +1340,19 @@ select:hover {
 	margin: 0;
 	padding: .3em .75em;
 }
-.add-tags-title:hover > i, .add-tags-title:active > i {
-	color: #1d8f58;
-}
+.add-tags-title:hover > i, .add-tags-title:active > i {color: #1d8f58;}
 .add-tags-title:active, .add-tags-selected {
 	top: 4px;
 	background-color: #1d8f58;
 	box-shadow: 0px 2px 0px #15643e;
 }
-.add-tags-selected i {
-	color: #14653e;
-}
+.add-tags-selected i {color: #14653e;}
 .add-tags-selected:hover {
 	cursor: pointer;
 	background-color: #1a7a4b;
 	box-shadow: 0px 2px 0px #1a7a4b;
 }
-.add-tags-selected:hover > i {
-	color: #14653e;
-}
+.add-tags-selected:hover > i {color: #14653e;}
 .add-tag-field {
 	position: relative;
 	top: .12em;
@@ -1515,15 +1382,9 @@ select:hover {
 	margin: .25em;
 	color: white !important;
 }
-.tag-to-be-added-value {
-	text-shadow: 1px 1px 3px #000;
-}
-.tag-to-be-added i {
-	color: #72ADD3;
-}
-.tag-to-be-added i:hover {
-	cursor: pointer;
-}
+.tag-to-be-added-value {text-shadow: 1px 1px 3px #000;}
+.tag-to-be-added i {color: #72ADD3;}
+.tag-to-be-added i:hover {cursor: pointer;}
 .tag-to-be-added div {
 	display: inline-block;
 	margin-left: .25em;
@@ -1555,12 +1416,8 @@ select:hover {
 	top: -1.8em;
 	font-size: .75em;
 }
-.tasks-title {
-	left: .5em;
-}
-.display-title {
-	right: .5em;
-}
+.tasks-title {left: .5em;}
+.display-title {right: .5em;}
 .tag-manager-options {
 	position: absolute;
 	margin: 0 auto;
@@ -1601,9 +1458,7 @@ select:hover {
 	transform: scale(1.1);
 	color: #21a465;
 }
-.display-grid-icon:active {
-	top: 8px;
-}
+.display-grid-icon:active {top: 8px;}
 /* PARTY MODE */
 .party-mode-icon {
 	display: inline-block !important;
@@ -1618,12 +1473,8 @@ select:hover {
 	z-index: 3;
 	transform: scale(3);
 }
-.party-mode-icon:hover > .party-mode-icon-text {
-	opacity: 1.0;
-}
-.party-mode-icon:active {
-	top: 4px;
-}
+.party-mode-icon:hover > .party-mode-icon-text {opacity: 1.0;}
+.party-mode-icon:active {top: 4px;}
 .party-mode-icon img {
 	width: 35px;
 	height: 35px;
@@ -1652,9 +1503,7 @@ select:hover {
 	position: absolute;
 	width: 200px;
 }
-.party-img-wrapper:hover {
-	cursor: pointer;
-}
+.party-img-wrapper:hover {cursor: pointer;}
 .party-img-wrapper img, .party-img-wrapper video,
 .grid-img-wrapper img, .grid-img-wrapper video {
 	width: 100%;
@@ -1671,15 +1520,9 @@ select:hover {
 	overflow-y: auto;
 	overflow-x: hidden;
 }
-div.grid-view-wrapper::-webkit-scrollbar {
-    width: 3px;
-}
-div.grid-view-wrapper::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
-div.grid-view-wrapper::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px #45c788;
-}
+div.grid-view-wrapper::-webkit-scrollbar {width: 3px;}
+div.grid-view-wrapper::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);}
+div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6px #45c788;}
 .grid-view-container {
 	position: relative;
 	margin: 0 auto;
@@ -1693,16 +1536,12 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	transform: scale(2) !important;
 	z-index: 20;
 }
-.grid-size-slider {	
-	top: 3.75em;
-}
+.grid-size-slider {	top: 3.75em;}
 .grid-refresh {
 	top: 9em;
 	text-align: center;
 }
-.grid-refresh i {
-	font-size: 2em;	
-}
+.grid-refresh i {font-size: 2em;	}
 .tag-manager-form form {
 	position: relative;
 	margin: 1em auto;
@@ -1739,9 +1578,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	margin: .25em auto;
 	width: 60%;
 }
-.rename, .delete {
-	font-size: .75em;
-}
+.rename, .delete {font-size: .75em;}
 /* Edit Profile Page ********************************************/
 .edit-profile-delete-wrapper {
 	position: absolute;
@@ -1835,9 +1672,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	border: none;
 	box-shadow: none;
 }
-.gifgrabber-title div {
-	display: inline-block;
-}
+.gifgrabber-title div {display: inline-block;}
 .gifgrabber-title-blurb {
 	position: relative;
 	top: -1.65em;
@@ -1853,12 +1688,8 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	max-height: 80%;
 	overflow: auto;
 }
-.gifgrabber-form {
-	top: 15%;
-}
-.gifgrabber-btn {
-	width: 5.6em;
-}
+.gifgrabber-form {top: 15%;}
+.gifgrabber-btn {width: 5.6em;}
 .gifgrabber-submit {
 	width: 10em;
 	height: 2em !important;
@@ -1896,9 +1727,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	cursor: pointer;
 	transform: scale(1.2);
 }
-.suggestion:active {
-	top: 4px;
-}
+.suggestion:active {top: 4px;}
 .gifgrabber-results {
 	position: relative;
 	top: 0;
@@ -1955,9 +1784,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	border: none;
 	font-size: 1em;
 }
-.inner-label {
-	margin-top: 2.25em;
-}
+.inner-label {margin-top: 2.25em;}
 .grabber-inner-cancel {
 	display: inline-block;
 	position: absolute;
@@ -1975,9 +1802,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	display: inline-block;
 	margin: 0 0.15em;
 }
-.grabber-inner-cancel i {
-	color: #ff3434;
-}
+.grabber-inner-cancel i {color: #ff3434;}
 .grabber-add-gifs-btn, .inactive-grabber-add-gifs-btn {
 	margin: 1em auto;
 	margin-top: .1em;
@@ -1986,9 +1811,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	border: none !important;
 	font-size: 1.2em !important;
 }
-.inactive-grabber-add-gifs-btn {
-	opacity: 0.4;
-}
+.inactive-grabber-add-gifs-btn {opacity: 0.4;}
 .grabber-results-element {
 	display: inline-block;
 	position: relative;
@@ -2007,9 +1830,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	cursor: pointer;
 	transform: scale(1.1);
 }
-.grabber-results-element:active {
-	top: 4px;
-}
+.grabber-results-element:active {top: 4px;}
 .grabber-results-title {
 	position: relative;
 	z-index: 1;
@@ -2050,9 +1871,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	border-radius: 50%;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
-.short-link:hover, .grabber-expand:hover {
-	transform: scale(1.5);
-}
+.short-link:hover, .grabber-expand:hover {transform: scale(1.5);}
 .grabber-expand {
 	padding: .35em;
 	right: 2.75em;
@@ -2077,9 +1896,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	border-radius: 50%;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
-.selected-gifs-blurb {
-	font-size: .65em;
-}
+.selected-gifs-blurb {font-size: .65em;}
 .bulk-selected-gifs {
 	right: 0.6em;
 	top: -.2em;
@@ -2102,13 +1919,9 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
-.grabber-data-label {
-	font-size: .5em;
-}
+.grabber-data-label {font-size: .5em;}
 /* Pagination Controls */
-.holder {
-	margin: 15px 0;
-}
+.holder {margin: 15px 0;}
 .holder a {
 	position: relative;
 	font-size: 12px;
@@ -2118,17 +1931,11 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	color: white;
 	border-radius: .5em;
 }
-.holder a:hover {
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-}
-.holder a:active {
-	top: 4px;
-}
+.holder a:hover {box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);}
+.holder a:active {top: 4px;}
 .holder a.jp-previous { margin-right: 1em;}
 .holder a.jp-next { margin-left: 1em;}
-.jp-next, .jp-previous {
-	display: block;
-}
+.jp-next, .jp-previous {display: block;}
 @media(min-width: 400px) {
 	.jp-next, .jp-previous {
 		display: inline-block;
@@ -2138,12 +1945,10 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {
 	color: #FF4242;
 	font-weight: bold;
 }
-.holder a.jp-disabled, a.jp-disabled:hover {
-	color: #bbb;
-}
+.holder a.jp-disabled, a.jp-disabled:hover {color: #bbb;}
 .holder a.jp-current, a.jp-current:hover,
 .holder a.jp-disabled, a.jp-disabled:hover {
 	cursor: default;
 	background: none;
 }
-.holder span { margin: 0 5px; }
+.holder span { margin: 0 5px;}
